Reviewed by Tim Hatcher.
        Fix for http://bugs.webkit.org/show_bug.cgi?id=15446
        Web Inspector find window is not resizable

        - Adds ability to resize the find window.
        - Fixes bug that messed up the find window when resizing the left sidebar. 

        * page/inspector/inspector.css:
        * page/inspector/inspector.html:
        * page/inspector/inspector.js:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27116 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/page/inspector/inspector.css
+++ b/WebCore/page/inspector/inspector.css
@@ -1927,3 +1927,12 @@ body.inactive #sidebar li.selected {
     z-index: 100;
     cursor: col-resize;
 }
+
+#searchResultsResizer {
+    position: absolute;
+    top: 0;
+    left: 200px;
+    right: 0;
+    height: 5px;
+    cursor: row-resize;
+}
