Reviewed by Tim Hatcher.
        Fix for http://bugs.webkit.org/show_bug.cgi?id=15175
        Cannot copy text of errors from Web Inspector from Console view

        * page/inspector/inspector.css: add -webkit-user-select: text for console messages.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27117 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/page/inspector/inspector.css
+++ b/WebCore/page/inspector/inspector.css
@@ -1335,6 +1335,7 @@ body.inactive #sidebar li.selected {
     border-bottom: 1px solid rgb(75%, 75%, 75%);
     word-break: break-word;
     position: relative;
+    -webkit-user-select: text;
 }
 
 .console-command a:hover {
