--- a/WebCore/page/inspector/inspector.css
+++ b/WebCore/page/inspector/inspector.css
@@ -595,7 +595,7 @@ body.attached #attachToggle:active {
     color: white;
     text-shadow: none;
     background-image: url(Images/gradientHighlight.png), url(Images/gradient.png);
-    -webkit-background-size: 100%, 100%;
+    -webkit-background-size: auto 100%, auto 100%;
     background-position: center;
     padding: 2px 4px;
     text-align: center;
@@ -1025,7 +1025,7 @@ body.inactive #sidebar li.selected {
     background-image: url(Images/gradient.png);
     background-repeat: repeat-x;
     background-position: bottom;
-    -webkit-background-size: 100%;
+    -webkit-background-size: auto 100%;
     -webkit-border-radius: 8px;
     text-shadow: rgba(255, 255, 255, 0.75) 0 1px 0;
 }
@@ -1173,7 +1173,7 @@ body.inactive #sidebar li.selected {
     background-image: url(Images/paneHeader.png);
     background-repeat: repeat-x;
     background-position: bottom;
-    -webkit-background-size: 100%;
+    -webkit-background-size: auto 100%;
     height: 14px;
     padding: 0 6px;
     border-top: 1px solid rgb(129, 129, 129);
@@ -1218,7 +1218,7 @@ body.inactive #sidebar li.selected {
     background-image: url(Images/paneGrowHandleLine.png), url(Images/paneBottomGrow.png);
     background-repeat: no-repeat, repeat-x;
     background-position: center center, bottom;
-    -webkit-background-size: 100%, 100%;;
+    -webkit-background-size: auto 100%, auto 100%;
     height: 5px;
 }
 
