Reviewed by Beth Dakin.
        - fix <rdar://problem/5551163> REGRESSION: Cursor does not change to arrow on "X" button in google maps, making it hard to click

        * css/html4.css: Added a 'cursor: auto' rule for links.
        * manual-tests/link-cursor-auto.html: Added.



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27761 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/css/html4.css
+++ b/WebCore/css/html4.css
@@ -564,6 +564,7 @@ input[type="file"]:focus::-webkit-file-upload-button {
 a:-webkit-any-link {
     color: -webkit-link;
     text-decoration: underline;
+    cursor: auto;
 }
 
 a:-webkit-any-link:active {
