Reviewed by Mark Rowe and Sam.
        This corrects a couple of issues in the Web Inspector where selected search results
        would not have the right text color when the window is inactive or the results are focused.

        * page/inspector/inspector.css:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27834 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebCore/page/inspector/inspector.css
+++ b/WebCore/page/inspector/inspector.css
@@ -263,6 +263,10 @@ body.inactive #toolbar .split-button-divider {
     color: rgba(255, 255, 255, 0.8);
 }
 
+body.inactive .focused .selected .search-results-section {
+    color: rgba(0, 0, 0, 0.5);
+}
+
 .blurred .selected .search-results-section {
     color: rgba(0, 0, 0, 0.5);
 }
@@ -1036,7 +1040,7 @@ body.inactive #sidebar li.selected {
     text-decoration: underline;
 }
 
-body:not(.inactive) .focused .content.tree li.selected * {
+body:not(.inactive) .focused .outline-disclosure li.selected * {
     color: inherit;
 }
 
