--- a/PlanetWebKit/wwwroot/planetwebkit.css
+++ b/PlanetWebKit/wwwroot/planetwebkit.css
@@ -88,6 +88,10 @@ h4 {
     margin: 0 190px 0 0;
 }
 
+#wrapper ul li {
+    list-style-image: url('http://webkit.org/images/blue-bullet.png');
+}
+
 .entry .content {
     margin: 10px 15px 0;
 }
